--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -75,10 +75,9 @@ It may be slow for the first run, but later runs should be faster.
 This repo doesn't yet have the CI/CD pipeline.
 So, it needs to be published manually.
 
-* In link:build.gradle.kts[], follow the <<_versioning_strategy,Versioning Strategy>>
-** For release increment the version property in link:buildSrc/src/main/kotlin/hydra.root-conventions.gradle.kts `version = "{hydra-version}"`
+* Follow the <<_versioning_strategy,Versioning Strategy>> to increment version link:buildSrc/{sourcedir}/hydra.root-conventions.gradle.kts[here]
 ** For SNAPSHOT releases, add a `-SNAPSHOT` at the end
-* Run this command:
+* Run this command to publish it to Nexus:
 
 [source,bash]
 ----
