--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -1,5 +1,5 @@
 = Contributing
-Gopal S Akshintala <gopala.akshintala@salesforce.com>
+Gopal S Akshintala <gopalakshintala@gmail.com>
 :Revision: 1.0
 ifdef::env-github[]
 :tip-caption: :bulb:
@@ -19,67 +19,74 @@ endif::[]
 :hide-uri-scheme:
 :sourcedir: src/main/java
 :imagesdir: images
-:hydra-version: 0.0.1
 :toc:
-
-[#_versioning_strategy]
-== Versioning Strategy
-
-====
-<A>.<B>.<C>
-====
-
-* A = We broke something on purpose (Breaking API change)
-* B = Profit (Feature / Improvement)
-* C = We broke something by accident (Bug)
 
 == Source-code Setup
 
-* You need to add your nexus credentials in `~/.gradle/gradle.properties` file (create file if not present), which are used by your local gradle to connect to nexus for publish. You can find them in your `core/app/main/workspace-user.xml` or https://nexus.soma.salesforce.com/nexus/[Nexus Portal]
+=== Install Java 11
 
-[source,properties]
-----
-  nexusUsername=...
-  nexusPassword=...
-----
+It needs JDK 11 installed in your system. I recommend doing it via https://sdkman.io/install[SDKMAN]. After you install SDKMAN, run `sdk list java` -> Pick Identifier for your favorite java 11 dist -> Run `sdk install java <Identifier-you-picked>`  to install Java.
 
-* This is a simple Gradle project and has its own Gradle wrapper. So nothing to install. Just run this command
+=== Build with Gradle
+
+This is a simple Gradle project and has its own Gradle wrapper. So nothing to install, run just this command:
 
 [source,bash]
 ----
 ./gradlew clean build
 ----
 
-* You can run/debug the existing unit tests or write your own to play with the tool.
+TIP: You *don't* need a local Gradle installation as the `gradlew` (Gradle wrapper) takes care of everything. But if you wish to install gradle locally, the recommendation is to  do it via https://sdkman.io/install[SDKMAN]. After you install SDKMAN, run `sdk install gradle` to install Gradle
+
+You can run/debug the existing unit tests or write your own to play with the tool.
 
 === Kotlin
 
 * The code-base is a mix of Java and Kotlin.
 If you're a Java developer and new to Kotlin, don't worry, Kotlin is a JVM language and can be used anywhere Java is used.
 In fact, it has got the reputation of *"Better Java!"*.
-* A typical Java developer can ramp up on Kotlin in less than a week.
-This free-course: https://www.coursera.org/learn/kotlin-for-java-developers[*Kotlin for Java Developers | Coursera*] can help catalyse your ramp-up.
+* A typical Java developer can ramp up on Kotlin in less than a week. These resources can help catalyze your ramp-up:
+** https://www.coursera.org/learn/kotlin-for-java-developers[*Kotlin for Java Developers | Coursera*], a free course
+** https://www.kotlinprimer.com/[The Kotlin Primer], tailor-made to facilitate Kotlin adoption inside Java-centric organizations
 * If you use Intellij, Kotlin plugin comes bundled.
 Similar development aids should be present for other code editors too.
 
 == Code Formatting
 
-* This repo uses https://github.com/diffplug/spotless[*Spotless*] for formatting files, as this repo has code from more than one programming-language.
-* Please run `./gradlew spotlessApply` before check-in to fix any formatting errors.
+This repo uses https://github.com/diffplug/spotless[*Spotless*] for formatting files. Please run `./gradlew spotlessApply` before check-in to fix any formatting errors.
 
-TIP: If you're on Intellij, replace your kbd:[Cmd+Shift+L] habit with kbd:[Ctrl]-kbd:[Ctrl] and run `gradle spotlessApply` (Or the respective action if you're on Eclipse).
-It may be slow for the first run, but later runs should be faster.
+TIP: If you're on Intellij, replace your kbd:[Cmd+Shift+L] habit with kbd:[Ctrl]-kbd:[Ctrl]
+and run `./gradlew spotlessApply` (Or the respective action if you're on VS Code/Eclipse).
+It may be slow for the first run, but subsequent runs should be faster.
 
 == Manual publishing
 
-This repo doesn't yet have the CI/CD pipeline.
-So, it needs to be published manually.
+=== Versioning Strategy
 
-* Follow the <<_versioning_strategy,Versioning Strategy>> to increment version link:buildSrc/{sourcedir}/hydra.root-conventions.gradle.kts[here]
-** For SNAPSHOT releases, add a `-SNAPSHOT` at the end
+====
+<A>.<B>.<C>
+====
+
+* A = Broke something on purpose (Breaking API change)
+* B = Profit (Feature / Improvement)
+* C = Broke something by accident (Bug)
+
+Follow the Versioning Strategy to increment version link:buildSrc/{sourcedir}/Config.kt[here]
+
+* For SNAPSHOT releases, add a `-SNAPSHOT` at the end of version number
 * Run this command to publish it to Nexus:
 
 [source,bash]
 ----
-./gradlew hydra:publish
+./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository -Dorg.gradle.parallel=false --no-configuration-cache
 ----
+
+* You can monitor for the new version jar to reflect in link:https://repo1.maven.org/maven2/com/salesforce/hydra/hydra/[Maven Central]. It usually takes less than 30 minutes.
+
+== Code of Conduct
+Please follow our link:CODE_OF_CONDUCT.md[Code of Conduct]
+
+== License
+By contributing your code,
+you agree to license your contribution under the terms of our project link:LICENSE[]
+and to sign the https://cla.salesforce.com/sign-cla[Salesforce CLA]
